<resources>
    <string name="app_name">Dhwani</string>
    <string name="app_title">Dhwani Music Player</string>
    <string name="action_search">Search</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="dhwani">Dhwani</string>
    <string name="soul_music">Music for the Soul</string>
    <string name="now_playing">Now Playing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kishori">Smt. Kishori Amonkar</string>
</resources>
